# ChangeLog for net-misc/ser2net
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/ser2net/ChangeLog,v 1.23 2010/10/26 11:19:16 flameeyes Exp $

  26 Oct 2010; Diego E. Pettenò <flameeyes@gentoo.org> ser2net-2.7.ebuild:
  QA: remove redundant autotools definition and avoid running econf twice.

*ser2net-2.7 (21 Jul 2010)

  21 Jul 2010; Stefan Briesenick <sbriesen@gentoo.org> +ser2net-2.7.ebuild:
  version bump

*ser2net-2.6 (12 Sep 2009)

  12 Sep 2009; Patrick Lauer <patrick@gentoo.org> +ser2net-2.6.ebuild:
  Bump

  23 Sep 2008; Stefan Briesenick <sbriesen@gentoo.org> files/ser2net.initd:
  tiny fix in init-script

  03 Sep 2008; Stefan Briesenick <sbriesen@gentoo.org> files/ser2net.confd,
  files/ser2net.initd:
  reworked init-script.

*ser2net-2.5 (02 Sep 2008)

  02 Sep 2008; Stefan Briesenick <sbriesen@gentoo.org> +files/ser2net.confd,
  +files/ser2net.initd, +ser2net-2.5.ebuild:
  version bump, adding init-script + config. Solves bug #160268.

  02 Sep 2008; Stefan Briesenick <sbriesen@gentoo.org>
  -files/ser2net-2.2-tcpwrappers-configure.in.patch:
  removed obsolete patch

  04 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> ser2net-2.3.ebuild:
  Fix very broken autotools handling, closes bug #152518.

  30 May 2006; Rajiv Aaron Manglani <rajiv@gentoo.org>
  -ser2net-2.2-r1.ebuild, ser2net-2.3.ebuild:
  stable on x86, bug #128728. remove old ebuild.

  16 Apr 2006; Jason Wever <weeve@gentoo.org> ser2net-2.3.ebuild:
  Stable on SPARC wrt bug #128728.

  08 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org> ser2net-2.3.ebuild:
  ppc stable, bug #128728

  04 Apr 2006; Rajiv Aaron Manglani <rajiv@gentoo.org> -ser2net-2.1.ebuild,
  -ser2net-2.2.ebuild, ser2net-2.2-r1.ebuild, ser2net-2.3.ebuild:
  2.2-r1 and 2.3 are ~amd64. remove old versions.

  17 Feb 2006; Michael Hanselmann <hansmi@gentoo.org> ser2net-2.2-r1.ebuild:
  Stable on ppc.
