@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/ser2net
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/ser2net/ChangeLog,v 1.23 2010/10/26 11:19:16 flameeyes Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/ser2net/ChangeLog,v 1.24 2012/02/16 19:12:23 phajdan.jr Exp $
+
+  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> ser2net-2.7.ebuild:
+  x86 stable wrt bug #397183
 
   26 Oct 2010; Diego E. Pettenò <flameeyes@gentoo.org> ser2net-2.7.ebuild:
   QA: remove redundant autotools definition and avoid running econf twice.
